Remove unneccesary code

--- a/stylesheets/sass/_styles.scss
+++ b/stylesheets/sass/_styles.scss
@@ -1,17 +1,4 @@
 /* ==========================================================================
-Major section comment type. These will output to .css file when compiled
+Styles
 ========================================================================== */
-
-
-
-
-// Minor section comment type. Will not output to .css file ============== //
-
-
-
-
-// Inline comment. Will not output to .css file
-
-
-
 
